# android_ros_app

./: README.md
android_app_msgs/: CMakeLists.txt  package.xml
android_app_msgs/msg/: AndroidApp.msg
android_ros_app/: CMakeLists.txt  build.gradle  buildscript.gradle  package.xml  settings.gradle
android_ros_app/android_ros_app_component/: AndroidManifest.xml  build.gradle
android_ros_app/android_ros_app_component/res/layout/: child_activity_layout.xml  main_activity_layout.xml
android_ros_app/android_ros_app_component/res/values/: attrs.xml  strings.xml
android_ros_app/android_ros_app_component/src/org/ros/android/android_ros_app_component/: ChildActivity.java  Client.java  DrawCircleView.java  MainActivity.java  Talker.java
